fix menu z-index above the menu container

--- a/dest/style.css
+++ b/dest/style.css
@@ -33,7 +33,7 @@
         overflow: auto;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         border: 1px solid #eee;
-        /*z-index: 1;*/
+        z-index: 21;
     }
     
     .microEditor .button-container>.show {
